<resources>
    <string name="app_name">StreamPack</string>
    <string name="action_settings">Settings</string>
    <string name="menu_actions">Menu actions</string>
    <string name="live">Start Live</string>
    <string name="stop">Stop</string>
    <string name="permission">Permission</string>
    <string name="permission_not_granted">To function properly, StreamPack needs your permission.</string>
    <string name="switch_camera_source">Switch camera source</string>
    <string name="turn_on_off_torch">Turn on/off torch</string>
    <string name="set_white_balance">Set white balance</string>
    <string name="set_exposure_compensation">Set exposure compensation</string>
    <string name="set_zoom_ratio">Set zoom ratio</string>
    <string name="set_auto_focus_mode">Set auto focus mode</string>
    <string name="mute_unmute_microphone">Mute unmute microphone</string>
    <string name="mute_unmute_video">Mute unmute video</string>
    <string name="video_muted">Video Muted</string>
    <string name="settings">Settings</string>
    <string name="warning">Warning</string>
    <plurals name="camera_frame_rate_not_supported">
        <item quantity="one">Camera %1$s does not support %2$d fps</item>
        <item quantity="other">Cameras %1$s do not support %2$d fps</item>
    </plurals>
    <string name="video">Video</string>
    <string name="video_enable">Enable</string>
    <string name="video_enable_key">video_enabled_key</string>
    <string name="video_settings_key">video_settings_key</string>
    <string name="video_encoder">Encoder</string>
    <string name="video_encoder_key">video_encoder_key</string>
    <string name="default_video_encoder">video/avc</string>
    <string name="video_resolution">Resolution</string>
    <string name="video_resolution_key">video_resolution_key</string>
    <string name="default_video_resolution">1280x720</string>
    <string name="video_fps">Frames per second</string>
    <string name="video_fps_key">video_fps_key</string>
    <string name="default_fps">30</string>
    <string name="video_bitrate">Bitrate in kbps</string>
    <string name="video_bitrate_key">live_video_bitrate_key</string>
    <string name="default_video_bitrate">1000</string>
    <string name="video_profile">Profile</string>
    <string name="video_profile_key">video_profile_key</string>
    <string name="video_level">Level</string>
    <string name="video_level_key">video_level_key</string>
    <string name="audio">Audio</string>
    <string name="audio_enable">Enable</string>
    <string name="audio_enable_key">audio_enabled_key</string>
    <string name="audio_settings_key">audio_settings_key</string>
    <string name="audio_encoder">Encoder</string>
    <string name="audio_encoder_key">audio_encoder_key</string>
    <string name="default_audio_encoder">audio/mp4a-latm</string>
    <string name="audio_number_of_channels">Number of channels</string>
    <string name="audio_channel_config_key">audio_channel_config_key</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="audio_bitrate_key">audio_bitrate_key</string>
    <string name="audio_sample_rate">Sample rate in kHz</string>
    <string name="audio_sample_rate_key">audio_sample_rate_key</string>
    <string name="audio_byte_format">Byte format</string>
    <string name="audio_byte_format_key">audio_byte_format_key</string>
    <string name="audio_byte_format_8bit">8 bits</string>
    <string name="audio_byte_format_16bit">16 bits</string>
    <string name="audio_byte_format_float">Float</string>
    <string name="audio_profile">Profile</string>
    <string name="audio_profile_key">audio_profile_key</string>
    <string name="endpoint">Endpoint</string>
    <string name="endpoint_type">Type</string>
    <string name="endpoint_type_key">endpoint_type_key</string>
    <string name="to_ts_file">Write to a TS file</string>
    <string name="to_flv_file">Write to a FLV file</string>
    <string name="to_srt">Stream to a remote SRT device</string>
    <string name="to_rtmp">Stream to a remote RTMP device</string>
    <string name="to_mp4_file">Write to a MP4 file</string>
    <string name="to_webm_file">Write to a WebM file</string>
    <string name="to_ogg_file">Write to an OGG file</string>
    <string name="to_3gp_file">Write to a 3GP file</string>
    <string name="srt_server">SRT Server</string>
    <string name="srt_server_key">srt_server_key</string>
    <string name="server_ip">IP</string>
    <string name="srt_server_ip_key">srt_server_ip_key</string>
    <string name="default_srt_server_url">192.168.1.11</string>
    <string name="server_port">Port</string>
    <string name="srt_server_port_key">srt_server_port_key</string>
    <string name="default_srt_server_port">9998</string>
    <string name="srt_server_stream_id_key">server_stream_id_key</string>
    <string name="srt_server_stream_id">Stream ID</string>
    <string name="default_srt_server_stream_id" />
    <string name="srt_server_passphrase_key">srt_server_passphrase_key</string>
    <string name="srt_server_passphrase">Passphrase</string>
    <string name="default_srt_server_stream_passphrase" />
    <string name="default_srt_server_passphrase">""</string>
    <string name="srt_server_enable_bitrate_regulation_key">srt_server_enable_bitrate_regulation_key</string>
    <string name="srt_server_enable_bitrate_regulation">Enable bitrate regulation</string>
    <string name="srt_server_video_target_bitrate_key">srt_server_video_target_bitrate_key</string>
    <string name="srt_server_video_target_bitrate">Video target bitrate (kb/s)</string>
    <string name="srt_server_video_min_bitrate_key">srt_server_video_min_bitrate_key</string>
    <string name="srt_server_video_min_bitrate">Video minimum bitrate (kb/s)</string>
    <string name="rtmp_server_key">rtmp_server_key</string>
    <string name="rtmp_server">RTMP Server</string>
    <string name="rtmp_server_url_key">rtmp_server_url_key</string>
    <string name="rtmp_default_url">rtmp://192.168.1.192/s/streamKey</string>
    <string name="rtmp_server_enable_bitrate_regulation_key">rtmp_server_enable_bitrate_regulation_key</string>
    <string name="rtmp_server_enable_bitrate_regulation">Enable bitrate regulation</string>
    <string name="rtmp_server_video_target_bitrate_key">rtmp_server_video_target_bitrate_key</string>
    <string name="rtmp_server_video_target_bitrate">Video target bitrate (kb/s)</string>
    <string name="rtmp_server_video_min_bitrate_key">rtmp_server_video_min_bitrate_key</string>
    <string name="rtmp_server_video_min_bitrate">Video minimum bitrate (kb/s)</string>
    <string name="server_url">URL</string>
    <string name="file_endpoint_key">file_endpoint_key</string>
    <string name="file">File</string>
    <string name="file_name_key">file_name_key</string>
    <string name="file_name">File name</string>
    <string name="default_file_name">StreamPackFile</string>
    <string name="video_encoder_h264">AVC/H.264</string>
    <string name="video_encoder_h265">HEVC/H.265</string>
    <string name="video_encoder_vp9">VP9</string>
    <string name="video_encoder_vp8">VP8</string>
    <string name="video_encoder_av1">AV1</string>
    <string name="video_encoder_h263">H.263</string>
    <string name="video_encoder_apv">APV</string>
    <string name="audio_encoder_aac">AAC</string>
    <string name="audio_encoder_opus">Opus</string>
    <string name="audio_profile_main">Main</string>
    <string name="audio_profile_lc">Low-Complexity</string>
    <string name="audio_profile_ssr">Scalable Sampling Rate</string>
    <string name="audio_profile_ltp">Long Term Prediction</string>
    <string name="audio_profile_he">High Efficiency</string>
    <string name="audio_profile_scalable">Scalable</string>
    <string name="audio_profile_er_lc">ER LC</string>
    <string name="audio_profile_ld">Low Delay</string>
    <string name="audio_profile_he_ps">High Efficiency v2</string>
    <string name="audio_profile_eld">Enhanced Low Delay</string>
    <string name="audio_profile_er_scalable">ER Scalable</string>
    <string name="audio_profile_xhe">Extended High Efficiency</string>
    <string name="av_profile_unknown">Unknown</string>
    <string name="video_profile_baseline">Baseline</string>
    <string name="video_profile_extended">Extended</string>
    <string name="video_profile_main">Main</string>
    <string name="video_profile_main10">Main10</string>
    <string name="video_profile_main10_hdr10">Main10Hdr10</string>
    <string name="video_profile_main10_hdr10_plus">Main10Hdr10Plus</string>
    <string name="video_profile_main_still">Main Still</string>
    <string name="video_profile_high">High</string>
    <string name="video_profile_high10">High10</string>
    <string name="video_profile_high422">High422</string>
    <string name="video_profile_constrained_baseline">Constrained Baseline</string>
    <string name="video_profile_constrained_high">Constrained High</string>
    <string name="video_profile_vp9_profile0">Profile 0</string>
    <string name="video_profile_vp9_profile1">Profile 1</string>
    <string name="video_profile_vp9_profile2">Profile 2</string>
    <string name="video_profile_vp9_profile2_hdr10">Profile 2 HDR10</string>
    <string name="video_profile_vp9_profile2_hrd10plus">Profile 2 HDR10Plus</string>
    <string name="video_profile_vp9_profile3">Profile 3</string>
    <string name="video_profile_vp9_profile3_hdr10">Profile 3 HDR10</string>
    <string name="video_profile_vp9_profile3_hdr10plus">Profile 3 HDR10Plus</string>
    <string name="video_level_1">Level1</string>
    <string name="video_level_1b">Level1b</string>
    <string name="video_level_10">Level10</string>
    <string name="video_level_11">Level11</string>
    <string name="video_level_12">Level12</string>
    <string name="video_level_13">Level13</string>
    <string name="video_level_2">Level2</string>
    <string name="video_level_20">Level20</string>
    <string name="video_level_21">Level21</string>
    <string name="video_level_22">Level22</string>
    <string name="video_level_23">Level23</string>
    <string name="video_level_3">Level3</string>
    <string name="video_level_30">Level30</string>
    <string name="video_level_31">Level31</string>
    <string name="video_level_32">Level32</string>
    <string name="video_level_33">Level33</string>
    <string name="video_level_4">Level4</string>
    <string name="video_level_40">Level40</string>
    <string name="video_level_41">Level41</string>
    <string name="video_level_42">Level42</string>
    <string name="video_level_43">Level43</string>
    <string name="video_level_45">Level45</string>
    <string name="video_level_5">Level5</string>
    <string name="video_level_50">Level50</string>
    <string name="video_level_51">Level51</string>
    <string name="video_level_52">Level52</string>
    <string name="video_level_53">Level53</string>
    <string name="video_level_6">Level6</string>
    <string name="video_level_60">Level60</string>
    <string name="video_level_61">Level61</string>
    <string name="video_level_62">Level62</string>
    <string name="video_level_63">Level63</string>
    <string name="video_level_7">Level7</string>
    <string name="video_level_70">Level70</string>
    <string name="video_level_71">Level71</string>
    <string name="video_level_72">Level72</string>
    <string name="video_level_73">Level73</string>
    <string name="video_level_version0">Version 0</string>
    <string name="video_level_version1">Version 1</string>
    <string name="video_level_version2">Version 2</string>
    <string name="video_level_version3">Version 3</string>
    <string name="video_level_main_level1">MainLevel1</string>
    <string name="video_level_high_level1">HighLevel1</string>
    <string name="video_level_main_level2">MainLevel2</string>
    <string name="video_level_high_level2">HighLevel2</string>
    <string name="video_level_main_level21">MainLevel21</string>
</resources>